# pairstat

./: .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  LICENSE  Makefile  README.md  README.rst  TODO.txt  optimization_notes.txt  pyproject.toml  pyvsf.py  setup.py  test.py
.github/workflows/: cd.yml  ci.yml  main.yml
cmake/: use_cython.cmake
docs/: Install.rst  conf.py  index.rst
docs/source/: API.rst  Contributing.rst  Developing.rst  Install.rst  Usage.rst  conf.py  fragment-overview.rst  index.rst
docs/source/pages/: Example-simulation.ipynb  Example.ipynb
examples/: Example.ipynb  Old-Example.ipynb
pyvsf/: _ArrayDict.py  _ArrayDict_cy.pyx  _MPIPool.py  __init__.py  _cut_region_iterator.py  _kernels.py  _kernels_cy.pyx  _kernels_new.py  _kernels_nonsf.py  _perf.py  pyvsf.py  small_dist_sf_props.py  snap_dataset_initializer.py  worker.py
pyvsf/grid_scale/: _kernels.py  _utils.py  worker.py
src/: accum_handle.hpp  accumulators.hpp  compound_accumulator.hpp  partition.hpp  utils.hpp  vsf.cpp  vsf.hpp
src/libvsf/: accum_col_variant.hpp  accum_handle.cpp  accum_handle.hpp  accumulators.hpp  compound_accumulator.hpp  fused_accumulator.hpp  partition.hpp  statdataview.hpp  utils.hpp  vsf.cpp  vsf.hpp
src/pairstat/: _ArrayDict_cy.pyx  _MPIPool.py  _api.py  _cut_region_iterator.py  _kernels.py  _kernels_cy.pyx  _kernels_nonsf.py  _partition_cy.pyx  _perf.py  pyvsf.py  small_dist_sf_props.py  snap_dataset_initializer.py  worker.py
src/pairstat/grid_scale/: _kernels.py  _utils.py  worker.py
src/pyvsf/: _ArrayDict_cy.pyx  __main__.py  _cut_region_iterator.py  _kernels.py  _kernels_cy.pyx  _kernels_nonsf.py  _partition_cy.pyx  _perf.py  pyvsf.py  small_dist_sf_props.py  worker.py
src/pyvsf/grid_scale/: _kernels.py  worker.py
tests/: bulk_statistics.py  grid_scale_vel_diffs.py  partition.py  small_dist_sf_props.py  test_kernels.py  test_neighbor_ind_iter.py  test_partition.py  test_statconf.py  test_twopoint_correlation.py  test_vsf_props.py  vsf_props.py
tests/other/: bulk_statistics.py  grid_scale_vel_diffs.py  small_dist_sf_props.py  test_neighbor_ind_iter.py
