[build-system]
requires=[
  "cython",
  # since tool.scikit-build.minimum-version is set to "build-system.requires",
  # the minimum build-requirement for scikit-build-core controls some default
  # behaviors when newer versions of scikit-build-core are installed
  # (we should keep an eye on this and keep increasing it over time)
  "scikit-build-core>=0.10"
]
build-backend = "scikit_build_core.build"

[project]
name = "pyvsf"
version = "0.2.0"
description = "Module for computing velocity structure function properties"
authors = [
  {name = "Matthew Abruzzo", email = "matthewabruzzo@gmail.com" },
]
# I need to revisit the following
dependencies = [
  'numpy',
  # not sure we actually need the following (taken from yt)
  # https://github.com/numpy/numpy/issues/27037
  "numpy!=2.0.1 ; platform_machine=='arm64' and platform_system=='Darwin'",
  'cython',
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Natural Language :: English",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.readme]
file = "README.rst"

[project.license]
text = "BSD 3-Clause"

[project.urls]
Homepage = 'https://github.com/mabruzzo/pyvsf'
Documentation = 'https://pyvsf.readthedocs.io/en/latest/'
Source = 'https://github.com/mabruzzo/pyvsf'
Tracker = 'https://github.com/mabruzzo/pyvsf/issues'

[project.optional-dependencies]
docs = [
  "sphinx>=7.0",
  "furo>=2024.01.29",
  'ipykernel',
  'matplotlib',
  'nbsphinx',
  "numpydoc>=1.8.0",
]

# these are for tests
dev = [
  'scipy'
]

# these are dependencies for extraneous features that are not currently
# documented. We will either start documenting these features, or we will
# remove them before the first release
extra-features = [
  'h5py',
  'pydantic',
  'schwimmbad',
  'scipy', # only needed for tests
  'yt',
]

[tool.scikit-build]
# if the following version of CMake isn't found, scikit-build-core will
# download and use a compatible CMake-verison
cmake.version = ">=3.16"

# The build type to use when building the project. Valid options are: "Debug",
# "Release", "RelWithDebInfo", "MinSizeRel", "", etc.
cmake.build-type = "Release"

# since this is set, this provides a method for backward compatibility.
minimum-version = "build-system.requires"

wheel.exclude = ["**.pyx"]

